# steam

./: .gitignore  README.md  setup.cfg
ansible/: ansible.cfg  sit.yml  site.yml
ansible/group_vars/: all.yml  compute.yml
ansible/inventory/: inventory.cfg
ansible/roles/baremetal/defaults/: main.yml
ansible/roles/baremetal/tasks/: ceph-osd.yml  install.yml  pre-install.yml
ansible/roles/ceph/defaults/: main.yml
ansible/roles/ceph/tasks/: config.yml  main.yml  osd.yml  parted.yml
ansible/roles/chrony/defaults/: main.yml
ansible/roles/chrony/handlers/: main.yml
ansible/roles/chrony/tasks/: config.yml
ansible/roles/chrony/templates/: chrony.conf.j2
ansible/roles/dns/defaults/: main.yml
ansible/roles/dns/tasks/: centos.yml  main.yml  ubuntu.yml
ansible/roles/dns/templates/: resolv.conf.j2
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: .install.yml.swp  init.yml  main.yml  registry.yml  systemd.yml
ansible/roles/docker/templates/: daemon.json.j2  docker.service.j2
ansible/roles/docker/vars/: redhat.yml  ubuntu.yml
ansible/roles/facts/tasks/: main.yml  python.yml
ansible/roles/firewall/tasks/: config.yml  deploy.yml  main.yml
ansible/roles/hosts/: main.yml
ansible/roles/hosts/tasks/: config.yml  deploy.yml  main.yml
ansible/roles/init/defaults/: main.yml
ansible/roles/init/tasks/: begin.yml  deploy.yml  end.yml  main.yml
ansible/roles/interfaces/tasks/: bond.yml  bridge.yml  clean.yml  config.yml  ethernet.yml  flushnetwork.yml  install.yml  main.yml
etc/kolla/: globals.yml  passwords.yml
(+23 files in other folders)
