[metadata]
name = steam
summary = Ansible modules for setup base os
description-file =
    README.md
author = sinovast
author-email = sinovast@gjzdgt.com
license = Apache License (2.0)
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/share/steam/playbooks/ =
        site.yml
    usr/share/steam/roles = roles/*
    usr/share/doc/steam/ =
        LICENSE
        README.md

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True